@@ -1,4 +1,7 @@
 28 February 2022 Petasis George <petasis@iit.demokritos.gr>:
+ * backend-django/clarin_backend/views.py: Fixes in coreference annotator
+ table save.
+
  * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.html:
  * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.ts:
  * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.html:
